--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,3 @@
 <h1>Welcome#index</h1>
 <p>Find me in app/views/welcome/index.html.erb</p>
-<script type="text/javascript" src="/ph_widget.js?url=draftsend.staging.producthabits.com/scores&amp;company=draftsend"></script>
+<script type="text/javascript" src="/assets/plugins/ph_widget.js?sd=devser-1"></script>
