--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,3 @@
 <h1>Welcome#index</h1>
 <p>Find me in app/views/welcome/index.html.erb</p>
-<script type="text/javascript" src="http://app.lvh.me:3000/ph_widget.js?sd=devser-1"></script>
+<script type="text/javascript" src="https://staging.producthabits.com/ph_widget.js?sd=draftsend"></script>
