added ip request check

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,4 @@
 <h1>Welcome#index</h1>
 <p>Find me in app/views/welcome/index.html.erb</p>
-<script type="text/javascript" src="https://app.producthabits.com/ph_widget.js?sd=helloman-2"></script>
+<script type="text/javascript" src="http://app.lvh.me:3000/ph_widget.js?sd=helloman-3"></script>
 
