--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,3 +2,6 @@
 <p>Find me in app/views/welcome/index.html.erb</p>
 <script type="text/javascript" src="http://app.lvh.me:3000/ph_widget.js?sd=helloman-3"></script>
 
+<% if @GMDR  %>
+    <h1>YEAH!!!... HERE ARE THE TERMS AND CONDITIONS FOR YOU MOTHERFOCKSS!!!</h1>
+<% end %>
