--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Welcome#index</h1>
 <p>Find me in app/views/welcome/index.html.erb</p>
-<script type="text/javascript" src="https://app.lvh.me:3000/ph_widget.js?sd=helloman-1"></script>
+<script type="text/javascript" src="http://app.lvh.me:3000/ph_widget.js?sd=helloman-1"></script>
 
 <% if @GMDR  %>
     <h1>YEAH!!!... HERE ARE THE TERMS AND CONDITIONS FOR YOU MOTHERFOCKSS!!!</h1>
